--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,8 @@
 resolver: lts-18.0
 
-# extra-deps:
-  # - HDBC-postgresql-2.5.0.0
+# stack unpack HDBC-postgresql
+extra-deps:
+  - HDBC-postgresql-2.5.0.0
 
 packages:
   - .
@@ -10,6 +11,6 @@ packages:
 nix:
   enable: true
   packages:
-#    - postgresql # No segfault
-#    - postgresql_12 # No segfault
-    - postgresql_13 # No segfault
+#    - postgresql # segfault
+#    - postgresql_12 # segfault
+    - postgresql_13 # segfault
